Table author {
  id int [pk, increment]
  name varchar [not null]
  email varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table post {
  id int [pk, increment]
  author_id int [not null]
  title varchar [not null]
  content text [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table comment {
  id int [pk, increment]
  post_id int [not null]
  author_id int [not null]
  content text [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table tag {
  id int [pk, increment]
  name varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table post_tag {
  post_id int [not null]
  tag_id int [not null]
  indexes {
    (post_id, tag_id) [pk]
  }
}

Ref: post.author_id > author.id
Ref: comment.post_id > post.id
Ref: comment.author_id > author.id
Ref: post_tag.post_id > post.id
Ref: post_tag.tag_id > tag.id